<resources>
    <string name="app_name">ActivityResult</string>
    <string name="text_view_hello_text">Hello World</string>
    <string name="button_color_text">Color</string>
    <string name="button_alignment_text">Alignment</string>
    <string name="button_red_text">Red</string>
    <string name="button_green_text">Green</string>
    <string name="button_blue_text">Blue</string>
    <string name="button_left_text">Left</string>
    <string name="button_center_text">Center</string>
    <string name="button_right_text">Right</string>
</resources>