<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/text_view_hello"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/text_view_hello_text"
        android:textSize="20sp">
    </TextView>
    <LinearLayout
        android:id="@+id/linear_layout_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/button_color_text"
            android:layout_marginEnd="5dp">
        </Button>
        <Button
            android:id="@+id/button_alignment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/button_alignment_text"
            android:layout_marginStart="5dp">
        </Button>
    </LinearLayout>
</LinearLayout>